고객 수정사항 수정(통계)

--- a/portal/html/USR-1220-F-DASH.html
+++ b/portal/html/USR-1220-F-DASH.html
@@ -593,16 +593,16 @@
                     </div>
                     <div class="btn_box_group">
                         <div class="btn_box">
-                            <a href="" class="btn_navy">업종별 투자실적 더보기 >></a>
+                            <a href="./USR-1221-F-DASH.html" class="btn_navy">업종별 투자실적 더보기 >></a>
                         </div>
                         <div class="btn_box">
-                            <a href="" class="btn_blue">지역별 투자실적 더보기 >></a>
+                            <a href="./USR-1221-F-DASH.html" class="btn_blue">지역별 투자실적 더보기 >></a>
                         </div>
                         <div class="btn_box">
-                            <a href="" class="btn_skyblue">업력별 투자실적 더보기 >></a>
+                            <a href="./USR-1221-F-DASH.html" class="btn_skyblue">업력별 투자실적 더보기 >></a>
                         </div>
                         <div class="btn_box">
-                            <a href="" class="btn_mint">투자유형별 투자실적 더보기 >></a>
+                            <a href="./USR-1221-F-DASH.html" class="btn_mint">투자유형별 투자실적 더보기 >></a>
                         </div>
                     </div>
                 </div>
