--- a/portal/html/USR-1221-F-DASH.html
+++ b/portal/html/USR-1221-F-DASH.html
@@ -694,7 +694,7 @@
                                             </thead>
                                             <tbody>
                                                 <tr>
-                                                    <th scope="row">초기 3년</th>
+                                                    <th scope="row">초기</th>
                                                     <td>2,099</td>
                                                     <td>2,955</td>
                                                     <td>1,951</td>
@@ -702,7 +702,7 @@
                                                     <td>959</td>
                                                 </tr>
                                                 <tr>
-                                                    <th scope="row">중기 7년</th>
+                                                    <th scope="row">중기</th>
                                                     <td>918</td>
                                                     <td>1,533</td>
                                                     <td>1,913</td>
@@ -710,7 +710,7 @@
                                                     <td>5,159</td>
                                                 </tr>
                                                 <tr>
-                                                    <th scope="row">후기 7년 이상</th>
+                                                    <th scope="row">후기</th>
                                                     <td>2,433</td>
                                                     <td>2,297</td>
                                                     <td>1,560</td>
@@ -946,7 +946,7 @@
                                             </thead>
                                             <tbody>
                                                 <tr>
-                                                    <th scope="row">상위 25%</th>
+                                                    <th scope="row">상위 25% 평균 수익률</th>
                                                     <td>18.3%</td>
                                                     <td>18.3%</td>
                                                     <td>18.3%</td>
@@ -954,7 +954,7 @@
                                                     <td>18.3%</td>
                                                 </tr>
                                                 <tr>
-                                                    <th scope="row">중위 50%</th>
+                                                    <th scope="row">중위 50% 평균 수익률</th>
                                                     <td>5.3%</td>
                                                     <td>5.3%</td>
                                                     <td>5.3%</td>
@@ -962,7 +962,7 @@
                                                     <td>5.3%</td>
                                                 </tr>
                                                 <tr>
-                                                    <th scope="row">하위 30%</th>
+                                                    <th scope="row">하위 30% 평균 수익률</th>
                                                     <td>2.1%</td>
                                                     <td>2.1%</td>
                                                     <td>2.1%</td>
@@ -1031,7 +1031,7 @@
                                                     <td>18.3%</td>
                                                 </tr>
                                                 <tr>
-                                                    <th scope="row">중위 25% 평균 수익률</th>
+                                                    <th scope="row">중위 50% 평균 수익률</th>
                                                     <td>5.3%</td>
                                                     <td>5.3%</td>
                                                     <td>5.3%</td>
@@ -1039,7 +1039,7 @@
                                                     <td>5.3%</td>
                                                 </tr>
                                                 <tr>
-                                                    <th scope="row">하위 25% 평균 수익률</th>
+                                                    <th scope="row">하위 30% 평균 수익률</th>
                                                     <td>2.1%</td>
                                                     <td>2.1%</td>
                                                     <td>2.1%</td>
@@ -1054,132 +1054,121 @@
 
                             </div>
 
+                            <div class="investment_performance_box type_03">
 
-                            <div class="investment_performance_box type_02">
-
-                                <div class="left">
-
-                                    <div class="tit_box">
-                                        <h4><span></span>분야별 운영 중인 펀드명 상위 5개</h4>
-                                    </div>
-
-                                    <div class="content_box">
-                                        <div class="tit_box rowsel">
-                                            <div class="sel_box">
-                                                <select>
-                                                    <option value="">선택</option>
-                                                    <option value="">ICT</option>
-                                                    <option value="">M&A</option>
-                                                    <option value="">문화</option>
-                                                    <option value="">바이오</option>
-                                                    <option value="">세컨더리</option>
-                                                    <option value="">일반 포함</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                        <div class="tbl_investment min">
-                                            <table>
-                                                <caption>차트 정보</caption>
-                                                <colgroup>
-                                                    <col width="120px">
-                                                    <col width="*">
-                                                </colgroup>
-                                                <thead>
-                                                    <tr>
-                                                        <th scope="col">순위</th>
-                                                        <th scope="col">펀드명</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                    <tr>
-                                                        <th scope="row">1위</th>
-                                                        <td>에스브이에이팔로우온투자조합</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <th scope="row">2위</th>
-                                                        <td>카카오 코파일럿 제1호 펀드</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <th scope="row">3위</th>
-                                                        <td>케이비 뉴딜 혁신펀드</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <th scope="row">4위</th>
-                                                        <td>델타유니콘투자조합3호</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <th scope="row">5위</th>
-                                                        <td>미래에셋 세이지 투자조합 2호</td>
-                                                    </tr>
-                                                </tbody>
-                                            </table>
-                                        </div>
-                                    </div>
-
+                                <div class="tit_box">
+                                    <h4><span></span>분야별 운영 중인 펀드/VC</h4>
                                 </div>
 
-                                <div class="right">
+                                <div class="all">
 
-                                    <div class="tit_box">
-                                        <h4><span></span>분야별 운영 중인 VC 상위 5개</h4>
+                                    <div class="tit_box rowsel">
+                                        <div class="sel_box">
+                                            <select>
+                                                <option value="">선택</option>
+                                                <option value="">ICT</option>
+                                                <option value="">M&A</option>
+                                                <option value="">문화</option>
+                                                <option value="">바이오</option>
+                                                <option value="">세컨더리</option>
+                                                <option value="">일반 포함</option>
+                                            </select>
+                                        </div>
                                     </div>
-                                    
-                                    <div class="content_box">
-                                        <div class="tit_box rowsel">
-                                            <div class="sel_box">
-                                                <select>
-                                                    <option value="">선택</option>
-                                                    <option value="">ICT</option>
-                                                    <option value="">M&A</option>
-                                                    <option value="">문화</option>
-                                                    <option value="">바이오</option>
-                                                    <option value="">세컨더리</option>
-                                                    <option value="">일반 포함</option>
-                                                </select>
+                                    <div class="all_left">
+                                        <div class="tit_box">
+                                            <h5><span></span>분야별 운영 중인 펀드명 상위 5개</h5>
+                                        </div>
+                                        <div class="content_box">
+                                            <div class="tbl_investment min">
+                                                <table>
+                                                    <caption>차트 정보</caption>
+                                                    <colgroup>
+                                                        <col width="120px">
+                                                        <col width="*">
+                                                    </colgroup>
+                                                    <thead>
+                                                        <tr>
+                                                            <th scope="col">순위</th>
+                                                            <th scope="col">펀드명</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        <tr>
+                                                            <th scope="row">1위</th>
+                                                            <td>에스브이에이팔로우온투자조합</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th scope="row">2위</th>
+                                                            <td>카카오 코파일럿 제1호 펀드</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th scope="row">3위</th>
+                                                            <td>케이비 뉴딜 혁신펀드</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th scope="row">4위</th>
+                                                            <td>델타유니콘투자조합3호</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th scope="row">5위</th>
+                                                            <td>미래에셋 세이지 투자조합 2호</td>
+                                                        </tr>
+                                                    </tbody>
+                                                </table>
                                             </div>
                                         </div>
-                                        <div class="tbl_investment min">
-                                            <table>
-                                                <caption>차트 정보</caption>
-                                                <colgroup>
-                                                    <col width="120px">
-                                                    <col width="*">
-                                                </colgroup>
-                                                <thead>
-                                                    <tr>
-                                                        <th scope="col">순위</th>
-                                                        <th scope="col">펀드명</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                    <tr>
-                                                        <th scope="row">1위</th>
-                                                        <td>소프트뱅크벤처스</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <th scope="row">2위</th>
-                                                        <td>카카오벤처스</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <th scope="row">3위</th>
-                                                        <td>케이비인베스트먼트</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <th scope="row">4위</th>
-                                                        <td>델타인베스트먼트</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <th scope="row">5위</th>
-                                                        <td>미래에셋벤처투자</td>
-                                                    </tr>
-                                                </tbody>
-                                            </table>
+                                    </div>
+
+                                    <div class="all_right">
+                                        <div class="tit_box">
+                                            <h5><span></span>분야별 운영 중인 VC 상위 5개</h5>
+                                        </div>
+                                        <div class="content_box">
+                                            <div class="tbl_investment min">
+                                                <table>
+                                                    <caption>차트 정보</caption>
+                                                    <colgroup>
+                                                        <col width="120px">
+                                                        <col width="*">
+                                                    </colgroup>
+                                                    <thead>
+                                                        <tr>
+                                                            <th scope="col">순위</th>
+                                                            <th scope="col">펀드명</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        <tr>
+                                                            <th scope="row">1위</th>
+                                                            <td>소프트뱅크벤처스</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th scope="row">2위</th>
+                                                            <td>카카오벤처스</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th scope="row">3위</th>
+                                                            <td>케이비인베스트먼트</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th scope="row">4위</th>
+                                                            <td>델타인베스트먼트</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th scope="row">5위</th>
+                                                            <td>미래에셋벤처투자</td>
+                                                        </tr>
+                                                    </tbody>
+                                                </table>
+                                            </div>
                                         </div>
                                     </div>
 
                                 </div>
 
                             </div>
+
                         </div>
                         <!-- //다섯번째 탭 -->
 
