--- a/portal/html/USR-1333-F-FORM.html
+++ b/portal/html/USR-1333-F-FORM.html
@@ -391,7 +391,7 @@
                                 <th scope="row"><label for="input_01">주제</label></th>
                                 <td colspan="3">
                                     <div class="inp_group">
-                                        <div class="txt">❉ 복수 선택 가능(최대 3개)</div>
+                                        <div class="txt_all">❉ 복수 선택 가능(최대 3개)</div>
                                         <div class="chk_box">
                                             <span>
                                                 <input type="checkbox" id="chk_40">
@@ -437,7 +437,7 @@
                                 <th scope="row"><label for="textarea_01">목적</label></th>
                                 <td colspan="3">
                                     <div class="inp_group">
-                                        <div class="txt">❉ 복수 선택 가능(최대 3개)</div>
+                                        <div class="txt_all">❉ 복수 선택 가능(최대 3개)</div>
                                         <div class="chk_box">
                                             <span>
                                                 <input type="checkbox" id="chk_01">
@@ -783,7 +783,7 @@
 </div>
 
 <!-- 토스트 메세지 -->
-<div class="toast_box"><div class="txt"></div></div>
+<div class="toast_box"><div class="txt_all"></div></div>
 
 </body>
 </html>
