투자유치희망기업검색 기획수정

--- a/portal/html/USR-1010-F-LIST.html
+++ b/portal/html/USR-1010-F-LIST.html
@@ -832,6 +832,16 @@
                                     <button class="arrow">업력 순</button>
                                 </div>
                             </li>
+                            <li>
+                                <div class="btn_box">
+                                    <button class="arrow">매출액(최근) 순</button>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="btn_box">
+                                    <button class="arrow">기업 업종 순</button>
+                                </div>
+                            </li>
                         </ul>
                         <div class="total">전체<strong>150</strong>건</div>
                     </div>
@@ -846,13 +856,15 @@
                                 <div class="group_box">
                                     <div class="state_box type_02">
                                         <span class="mauve">바이오/의료</span>
+                                        <span class="more">+</span>
                                     </div>
                                     <div class="tit">엘엔에스벤처캐피탈</div>
                                     <div class="info">
                                         <div>
                                             <span>서울</span>
                                             <span>7년 0개월</span>
-                                            <span>100억</span>
+                                            <span>투자희망금액 100억</span>
+                                            <span>매출액 10억</span>
                                         </div>
                                         <span class="introduce">기업소개 (100자), 설명 등</span>
                                     </div>
@@ -867,13 +879,15 @@
                                 <div class="group_box">
                                     <div class="state_box type_02">
                                         <span class="mauve">바이오/의료</span>
+                                        <span class="more">+</span>
                                     </div>
                                     <div class="tit">엘엔에스벤처캐피탈</div>
                                     <div class="info">
                                         <div>
                                             <span>서울</span>
                                             <span>7년 0개월</span>
-                                            <span>100억</span>
+                                            <span>투자희망금액 100억</span>
+                                            <span>매출액 10억</span>
                                         </div>
                                         <span class="introduce">기업소개 (100자), 설명 등</span>
                                     </div>
@@ -888,13 +902,15 @@
                                 <div class="group_box">
                                     <div class="state_box type_02">
                                         <span class="mauve">바이오/의료</span>
+                                        <span class="more">+</span>
                                     </div>
                                     <div class="tit">엘엔에스벤처캐피탈</div>
                                     <div class="info">
                                         <div>
                                             <span>서울</span>
                                             <span>7년 0개월</span>
-                                            <span>100억</span>
+                                            <span>투자희망금액 100억</span>
+                                            <span>매출액 10억</span>
                                         </div>
                                         <span class="introduce">기업소개 (100자), 설명 등</span>
                                     </div>
@@ -909,13 +925,15 @@
                                 <div class="group_box">
                                     <div class="state_box type_02">
                                         <span class="mauve">바이오/의료</span>
+                                        <span class="more">+</span>
                                     </div>
                                     <div class="tit">엘엔에스벤처캐피탈</div>
                                     <div class="info">
                                         <div>
                                             <span>서울</span>
                                             <span>7년 0개월</span>
-                                            <span>100억</span>
+                                            <span>투자희망금액 100억</span>
+                                            <span>매출액 10억</span>
                                         </div>
                                         <span class="introduce">기업소개 (100자), 설명 등</span>
                                     </div>
@@ -930,13 +948,15 @@
                                 <div class="group_box">
                                     <div class="state_box type_02">
                                         <span class="mauve">바이오/의료</span>
+                                        <span class="more">+</span>
                                     </div>
                                     <div class="tit">엘엔에스벤처캐피탈</div>
                                     <div class="info">
                                         <div>
                                             <span>서울</span>
                                             <span>7년 0개월</span>
-                                            <span>100억</span>
+                                            <span>투자희망금액 100억</span>
+                                            <span>매출액 10억</span>
                                         </div>
                                         <span class="introduce">기업소개 (100자), 설명 등</span>
                                     </div>
@@ -951,13 +971,15 @@
                                 <div class="group_box">
                                     <div class="state_box type_02">
                                         <span class="mauve">바이오/의료</span>
+                                        <span class="more">+</span>
                                     </div>
                                     <div class="tit">엘엔에스벤처캐피탈</div>
                                     <div class="info">
                                         <div>
                                             <span>서울</span>
                                             <span>7년 0개월</span>
-                                            <span>100억</span>
+                                            <span>투자희망금액 100억</span>
+                                            <span>매출액 10억</span>
                                         </div>
                                         <span class="introduce">기업소개 (100자), 설명 등</span>
                                     </div>
@@ -972,13 +994,15 @@
                                 <div class="group_box">
                                     <div class="state_box type_02">
                                         <span class="mauve">바이오/의료</span>
+                                        <span class="more">+</span>
                                     </div>
                                     <div class="tit">엘엔에스벤처캐피탈</div>
                                     <div class="info">
                                         <div>
                                             <span>서울</span>
                                             <span>7년 0개월</span>
-                                            <span>100억</span>
+                                            <span>투자희망금액 100억</span>
+                                            <span>매출액 10억</span>
                                         </div>
                                         <span class="introduce">기업소개 (100자), 설명 등</span>
                                     </div>
