기획 수정사항 수정

--- a/portal/html/USR-1010-F-DTL.html
+++ b/portal/html/USR-1010-F-DTL.html
@@ -326,7 +326,7 @@
                             <div class="administration_box">
                                 <div class="state_box type_02">
                                     <span class="mauve">기업업종</span>
-                                    <span class="green">특이사항</span>
+                                    <span class="green">벤처기업</span>
                                 </div>
                                 <div class="btn_box">
                                     <a href="" class="btn_setting">설정</a>
