벤처투자톡-마이톡 수정

--- a/portal/html/USR-1341-F-LIST.html
+++ b/portal/html/USR-1341-F-LIST.html
@@ -303,7 +303,7 @@
                             <li><a href="./USR-1310-H-CONTN.html">포털소개</a></li>
                             <li><a href="./USR-1320-B-LIST.html">공지사항</a></li>
                             <li><a href="./USR-1330-F-LIST.html">커뮤니티</a></li>
-                            <!-- <li><a href="./USR-1350-F-DASH.html">벤처투자 부당행위 신고센터</a></li> -->
+                            <li><a href="./USR-1350-F-DASH.html">벤처투자 부당행위 신고센터</a></li>
                             <li><a href="./USR-1361-H-CONTN.html">유관기관 안내</a></li>
                         </ul>
                     </li>
@@ -797,7 +797,7 @@
                                             </div>
                                         </div>
                                         
-                                        <div class="tbl_card_list type_01">
+                                        <div class="tbl_card_list type_01 nomore">
                                             <!-- 리스트 -->
                                             <ul>
                                                 <li>
@@ -805,7 +805,6 @@
                                                         <span>
                                                             한국에서 드물게 기술 회사에 초기 투자를 해주는 곳. 한국 창업 생태계에 꼭 필요한 일을 하고 있다고 생각합니다. 항상 파이팅입니다! 스타트업에 진심을 다해주시는 멋진 엑셀러레이터입니다.
                                                         </span>
-                                                        <button class="more dialog-link" data-target="#note_03">더보기</button>
                                                         <ul>
                                                             <li>2022-10-00 00:00:00</li>
                                                             <li><button class="modify dialog-link" data-target="#note_02">수정</button></li>
@@ -824,7 +823,6 @@
                                                         <span>
                                                             한국에서 드물게 기술 회사에 초기 투자를 해주는 곳.
                                                         </span>
-                                                        <button class="more dialog-link" data-target="#note_03">더보기</button>
                                                         <ul>
                                                             <li>2022-10-00 00:00:00</li>
                                                             <li><button class="modify dialog-link" data-target="#note_02">수정</button></li>
@@ -843,7 +841,6 @@
                                                         <span>
                                                             한국에서 드물게 기술 회사에 초기 투자를 해주는 곳. 한국 창업 생태계에 꼭 필요한 일을 하고 있다고 생각합니다. 항상 파이팅입니다! 스타트업에 진심을 다해주시는 멋진 엑셀러레이터입니다.
                                                         </span>
-                                                        <button class="more dialog-link" data-target="#note_03">더보기</button>
                                                         <ul>
                                                             <li>2022-10-00 00:00:00</li>
                                                             <li><button class="modify dialog-link" data-target="#note_02">수정</button></li>
@@ -862,7 +859,6 @@
                                                         <span>
                                                             한국에서 드물게 기술 회사에 초기 투자를 해주는 곳.
                                                         </span>
-                                                        <button class="more dialog-link" data-target="#note_03">더보기</button>
                                                         <ul>
                                                             <li>2022-10-00 00:00:00</li>
                                                             <li><button class="modify dialog-link" data-target="#note_02">수정</button></li>
@@ -881,7 +877,6 @@
                                                         <span>
                                                             한국에서 드물게 기술 회사에 초기 투자를 해주는 곳. 한국 창업 생태계에 꼭 필요한 일을 하고 있다고 생각합니다. 항상 파이팅입니다! 스타트업에 진심을 다해주시는 멋진 엑셀러레이터입니다.
                                                         </span>
-                                                        <button class="more dialog-link" data-target="#note_03">더보기</button>
                                                         <ul>
                                                             <li>2022-10-00 00:00:00</li>
                                                             <li><button class="modify dialog-link" data-target="#note_02">수정</button></li>
@@ -900,7 +895,6 @@
                                                         <span>
                                                             한국에서 드물게 기술 회사에 초기 투자를 해주는 곳.
                                                         </span>
-                                                        <button class="more dialog-link" data-target="#note_03">더보기</button>
                                                         <ul>
                                                             <li>2022-10-00 00:00:00</li>
                                                             <li><button class="modify dialog-link" data-target="#note_02">수정</button></li>
@@ -919,7 +913,6 @@
                                                         <span>
                                                             한국에서 드물게 기술 회사에 초기 투자를 해주는 곳. 한국 창업 생태계에 꼭 필요한 일을 하고 있다고 생각합니다. 항상 파이팅입니다! 스타트업에 진심을 다해주시는 멋진 엑셀러레이터입니다.
                                                         </span>
-                                                        <button class="more dialog-link" data-target="#note_03">더보기</button>
                                                         <ul>
                                                             <li>2022-10-00 00:00:00</li>
                                                             <li><button class="modify dialog-link" data-target="#note_02">수정</button></li>
@@ -938,7 +931,6 @@
                                                         <span>
                                                             한국에서 드물게 기술 회사에 초기 투자를 해주는 곳.
                                                         </span>
-                                                        <button class="more dialog-link" data-target="#note_03">더보기</button>
                                                         <ul>
                                                             <li>2022-10-00 00:00:00</li>
                                                             <li><button class="modify dialog-link" data-target="#note_02">수정</button></li>
