--- a/portal/html/USR-1161-H-CONTN.html
+++ b/portal/html/USR-1161-H-CONTN.html
@@ -390,7 +390,7 @@
                                                 <a href="" class="btn_navy" title="새 창 이동" target="_blank">연수원 바로가기 >></a>
                                             </div>
                                             <div class="btn_box">
-                                                <a href="https://www.ekvci.co.kr" class="btn_blue" title="새 창 이동" target="_blank">한국벤처캐피탈연수원(KVCI) 바로가기 >></a>
+                                                <a href="https://www.ekvci.co.kr" class="btn_blue" title="새 창 이동" target="_blank">KVCA 이러닝센터 바로가기 >></a>
                                             </div>
                                         </div>
                                     </dd>
